# ZPG_projekt

./: Application.cpp  Application.h  CMakeLists.txt  Model.cpp  Projekt_ZPG_LAN0229.sln  README.md  Shader_program.cpp  Shader_program.h  Shape.cpp  Shape.h  Zpg_cviko1.cpp  Zpg_cviko2.cpp  fml_02.ipynb  fragment_shader.shader  main.cpp  shader_program.cpp  shader_program.h  vao_file.cpp  vao_file.h  vbo_file.cpp  vbo_file.h
Projekt_ZPG_LAN0229/: Application.h  Projekt_ZPG_LAN0229.vcxproj  Projekt_ZPG_LAN0229.vcxproj.filters  shader_program.cpp
Projekt_ZPG_LAN0229/Debug/: vc143.idb
Projekt_ZPG_LAN0229/Debug/Projekt_.d8d6bc0b.tlog/: CL.command.1.tlog  Projekt_ZPG_LAN0229.lastbuildstate
Projekt_ZPG_LAN0229/x64/Debug/: Projekt_ZPG_LAN0229.exe.recipe  Projekt_ZPG_LAN0229.ilk  vc143.idb
Projekt_ZPG_LAN0229/x64/Debug/Projekt_.d8d6bc0b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projekt_ZPG_LAN0229.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Projekt_ZPG_LAN0229/x64/Debug/Projekt_ZPG_LAN0229.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ZPG_projekt/: Application.cpp  CMakeLists.txt  Model.h  Shader.cpp  Shader.h  Shader_program.cpp  Shader_program.h  Shape.cpp
